# uniswap-v2-pair-indexer

./: .gitignore  Cargo.toml  README.md
migrations/2024-01-20-222718_create_sync_events/: down.sql  up.sql
migrations/2024-01-21-011042_add_address_col/: down.sql  up.sql
migrations/2024-01-21-163101_add_mint_events/: down.sql  up.sql
migrations/2024-01-22-010218_add_burn_events/: down.sql  up.sql
migrations/2024-01-22-012356_add_swap_events/: up.sql
src/: helpers.rs  main.rs  models.rs  schema.rs  utils.rs
