[package]
name = "uniswap-v2-pair-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.4.2"
diesel = { version = "2.1.4", features = ["postgres", "bigdecimal", "numeric"] }
dotenvy = "0.15.7"
env_logger = "0.11.0"
ethers = { version = "2.0.11", features = ["ws"] }
eyre = "0.6.11"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
